--- a/babynophone.App/babynophone.App.UWP/project.json
+++ b/babynophone.App/babynophone.App.UWP/project.json
@@ -1,6 +1,11 @@
 ﻿{
   "dependencies": {
-    "MvvmLightLibs": "5.3.0",
+    "CommonServiceLocator": "1.3.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Prism.Core": "6.2.0",
+    "Prism.Forms": "6.2.0",
+    "Prism.Unity.Forms": "6.2.0",
+    "Unity": "4.0.1",
     "Xamarin.Forms": "2.3.3.193"
   },
   "frameworks": {
