--- a/babynophone.App/babynophone.App.Android/babynophone.App.Android.csproj
+++ b/babynophone.App/babynophone.App.Android/babynophone.App.Android.csproj
@@ -74,6 +74,14 @@
       <HintPath>..\..\packages\Prism.Unity.Forms.6.2.0\lib\MonoAndroid1.0\Prism.Unity.Forms.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SQLite.Net, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLite.Net.Core-PCL.3.1.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SQLite.Net.Platform.XamarinAndroid, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLite.Net-PCL.3.1.1\lib\MonoAndroid\SQLite.Net.Platform.XamarinAndroid.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ObjectModel" />
@@ -129,9 +137,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AudioRecorder.cs" />
+    <Compile Include="CallSkype.cs" />
+    <Compile Include="IntentFactory.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="MyTimer.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MyTimerCreator.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TurnOnOffScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
