--- a/babynophone.App/babynophone.App.UWP/project.json
+++ b/babynophone.App/babynophone.App.UWP/project.json
@@ -5,6 +5,8 @@
     "Prism.Core": "6.2.0",
     "Prism.Forms": "6.2.0",
     "Prism.Unity.Forms": "6.2.0",
+    "SQLite.Net-PCL": "3.1.1",
+    "SQLite.Net.Core-PCL": "3.1.1",
     "Unity": "4.0.1",
     "Xamarin.Forms": "2.3.3.193"
   },
