--- a/babynophone.App/babynophone.App/babynophone.App.csproj
+++ b/babynophone.App/babynophone.App/babynophone.App.csproj
@@ -38,6 +38,19 @@
     <Compile Include="Application.xaml.cs">
       <DependentUpon>Application.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\ExecuteAction.cs" />
+    <Compile Include="Common\IAudioRecorder.cs" />
+    <Compile Include="Common\ICallSkype.cs" />
+    <Compile Include="Common\ICreateTimer.cs" />
+    <Compile Include="Common\IExecuteAction.cs" />
+    <Compile Include="Common\IInitializeSettings.cs" />
+    <Compile Include="Common\InitializeSettings.cs" />
+    <Compile Include="Common\ISettings.cs" />
+    <Compile Include="Common\ITimer.cs" />
+    <Compile Include="Common\ITurnOnOffScreen.cs" />
+    <Compile Include="Common\MasterTable.cs" />
+    <Compile Include="Common\Settings.cs" />
+    <Compile Include="Common\SkypeTable.cs" />
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -93,6 +106,10 @@
     </Reference>
     <Reference Include="Prism.Unity.Forms, Version=6.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Prism.Unity.Forms.6.2.0\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Prism.Unity.Forms.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SQLite.Net, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLite.Net-PCL.3.1.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
